<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cord_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sahurjt.bstdriver.LoginActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/driver_login" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        tools:context="com.sahurjt.bstdriver.LoginActivity"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/login_activity_heading"
            android:textColor="#aaaaaa"
            android:textSize="25sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/general_layout_padding_left">

            <EditText
                android:id="@+id/login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_login_hint"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/general_layout_padding_left">

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />


        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkSchoolToHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_layout_padding_all"
            android:text="@string/check_trip"
            android:theme="@style/materialCheckBox"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:onClick="doLogin"
            android:text="@string/btn_sign_in"
            android:theme="@style/materialButton" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/general_layout_padding_all"
        android:text="@string/txt_project_by"
        android:textColor="#2fa193"
        android:gravity="center_horizontal"/>
</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
